[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "rquangsheng"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3", features = ["encoding-raw"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv6-backend" ] }

dp32g030 = { version = "1.0.0", features = ["critical-section", "defmt", "rt"] }

portable-atomic = { version = "1.13.0", features = ["critical-section"] }

rtic-monotonics = { version = "2.1.0", features = [ "cortex-m-systick" ]}
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
defmt-serial = "0.10.0"
static_cell = "2.1.1"
embedded-io = "0.6.1"
st7565 = "0.6.0"
embedded-hal-bus = "0.3.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
heapless = "0.9.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
