[package]
name = "host_sw"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { git = "https://github.com/Kezii/simulator.git"}
embedded-hal = "1.0.0"
env_logger = "0.11.8"
log = "0.4.29"
rquansheng = {path = "../cross/rquansheng"}
serialport = { version = "4.8.1", default-features = false }
