[package]
name = "dp30g030_hal"
version = "0.1.0"
edition = "2024"

[dependencies]
nb = "1.1.0"
dp32g030 = { version = "1.0.0", features = ["critical-section", "defmt", "rt"] }
embedded-hal = "1.0.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.7.0"