[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "rquansheng"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3", features = ["encoding-raw"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv6-backend" ] }

dp30g030_hal = { path = "../dp30g030_hal"}
dp32g030 = { version = "1.0.0", features = ["critical-section", "defmt", "rt"] }

portable-atomic = { version = "1.13.0", features = ["critical-section"] }

rtic-monotonics = { version = "2.1.0", features = [ "cortex-m-systick" ]}
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
defmt-serial = "0.10.0"
static_cell = "2.1.1"
embedded-io = "0.6.1"
st7565 = "0.6.0"
embedded-hal-bus = "0.3.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
heapless = "0.9.2"
bitfield-struct = "0.12.1"
rtic-sync = "1.4.0"
#futures-util = {version = "0.3.31", default_features=false}
embassy-futures = "0.1.2"
log = "0.4.29"
bk4819_reg_macros = { path = "../bk4819_reg_macros" }
postcard = "1.1.3"
serde = { version = "1.0.*", default-features = false }
cobs = { version = "0.5.0", default-features = false }
embedded-io-async = "0.7.0"